# openapi-subgraph-example

./: README.md
location-grafbase/: run.sh
location-grafbase/grafbase/: schema.graphql
location-service/: Cargo.toml  openapi.yaml
location-service/src/: main.rs
review-grafbase/: run.sh
review-grafbase/grafbase/: schema.graphql
review-grafbase/grafbase/resolvers/review/: location.ts
review-service/: Cargo.toml  openapi.yaml
review-service/src/: main.rs
supergraph/: supergraph.yaml
todo-grafbase/grafbase/: schema.graphql
todo-service/: Cargo.toml  openapi.yaml
todo-service/src/: main.rs
user-grafbase/grafbase/: schema.graphql
user-service/: Cargo.toml  openapi.yaml
user-service/src/: main.rs
